--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2005,6 +2005,107 @@ footer {
   }
 }
 
+@media (max-width: 396px) {
+ 
+  .main-header .logo {
+     margin-left: 20px;
+     
+   }
+   .section-heading h2 {
+     font-size: 1.4rem;
+   }
+ 
+   .main-banner .caption h2 {
+     font-size: 1.4rem;
+   }
+ 
+   .main-banner .caption h6 {
+     font-size: 0.8rem;
+     top: 1.5rem;
+   }
+   #tabs p {
+     font-size: 1rem;
+   }
+   
+   .swiper-slide {
+     background-position: center;
+     background-size: cover;
+     width: 300px;
+     height: 300px;
+   }
+   .row img {
+     width: 100%;
+     height: auto;
+     display: block;
+     margin: 0 auto;
+     object-fit: contain;
+   }
+   .whatsapp-button img {
+     width: 40px;
+     height: 40px;
+   }
+   .whatsapp-button {
+     display: flex;
+     align-items: center;
+     padding: 10px 20px;
+     border-radius: 25px;
+     background-color: #25D366;
+     color: #ffffff;
+     font-weight: bold;
+     text-decoration: none;
+     cursor: pointer;
+   }
+   /* curses */
+ 
+   section.courses .item img {  
+     width: 50%;
+     height: auto;
+     display: block;
+     margin: 0 auto;
+     object-fit: contain;
+   }
+ 
+   section.courses .item .down-content {
+     padding: 20px;
+     background-color: #ffffff;
+     text-align: center;
+     width: 50%;
+   } 
+ 
+   section.courses .item .down-content h4 {
+     font-size: 16px;
+     text-transform: uppercase;
+     color: #1e1e1e;
+     letter-spacing: 0.5px;
+     font-weight: 700;
+     margin-top: 0px;
+     margin-bottom: 20px;
+   }
+ 
+   
+   /* video */
+   section.video {
+     padding-top: 5rem;
+     padding-bottom: 5rem;
+   }
+    
+  
+   section.video .left-content {
+     position: relative;
+     top: 0;
+     left: 0.5rem; 
+   }
+  
+   .video-item .video-caption {  
+    display: none;
+   }
+   .video-item figure a {
+     position: relative;
+     top: 0;
+     right: 2rem;
+   }
+   
+ }
 @media (max-width: 375px) {
  
  .main-header .logo {
